fixed mongodb string values containing dollar signs